--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ axum = "0.6"
 axum-extra = { version = "0.8", features = ["cookie"] }
 tower = "0.4"
 http-body = "0.4"
-pin-project = "1.1"
 time = "0.3"
+async-trait = "0.1"
