--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,13 @@ log = "0.4"
 http-body = "0.4"
 time = "0.3"
 async-trait = "0.1"
+
+[dev-dependencies]
+axum-test = "12.4"
+clap = { version = "4.4", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
+uuid = { version = "1.4", features = ["v4"] }
