--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
 uuid = { version = "1.4", features = ["v4"] }
+fn-decorator = "1"
+parking_lot = "0"
