feat: implemented authorization tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,10 @@
 		{
 			"type": "cargo",
 			"command": "test",
+			"args": [
+				"--",
+				"--nocapture",
+			],
 			"problemMatcher": [
 				"$rustc"
 			],
